Do not reference non-existant bundled flash on Chrome OS.

Chrome on Chrome OS is incorrectly building against the Flash player
bundled in third_party/. However, on Chrome OS, flash player is loaded
from the root partition and passed to Chrome via command line. So Chrome
should not be referencing the versions in flapper_version.h. In
addition, this means the bundled flash player loading code is unused.

BUG=644795,644400

Review-Url: https://codereview.chromium.org/2340643002
Cr-Commit-Position: refs/heads/master@{#419513}

Former-commit-id: cf804457306e0facdb59124fa38b5315493e1da7